--- a/todoListProject/src/styles.scss
+++ b/todoListProject/src/styles.scss
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    background-image: url(https://html-templates.info/images/pages/140520040155.jpg);
+
+}
