--- a/todoListProject/src/app/todo-list/todo-element/todo-element.component.html
+++ b/todoListProject/src/app/todo-list/todo-element/todo-element.component.html
@@ -1,1 +1,5 @@
-<div class="">todo-element works!</div> 
+<div class="outer-layout">
+    <div>{{data}}</div>
+    <button (click)="change(data, 'delete')">Delete</button>
+    <button (click)="change(data, 'toProgress')" >To progress</button>
+</div> 
