--- a/todoListProject/src/app/todo-list/todo-element/todo-element.component.scss
+++ b/todoListProject/src/app/todo-list/todo-element/todo-element.component.scss
@@ -1,3 +1,17 @@
-div {
+.outer-layout {
     border: 1px solid sandybrown;
+    border-radius: 4px;
+    background-color: rgb(245, 245, 245);
+}
+
+button {
+   padding: 5px;
+   background: rgb(238,174,202);
+   background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
+   border-radius: 10px;
+   
+   
+   
+   
+   
 }
