--- a/todoListProject/src/app/todo-list/todo-element/todo-element.component.html
+++ b/todoListProject/src/app/todo-list/todo-element/todo-element.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="data" class="outer-layout">
+<div class="outer-layout">
     <div>{{data.task}}</div>
     <button (click)="changeStatus()">Delete</button>
     <button (click)="changeStatus(status.IN_PROGRESS)" >To progress</button>
